# daes

./: README.md  pyproject.toml
.github/workflows/: test-python.yml
examples/: run_cylinder_static_calcul.py
src/daes/: __init__.py  calcul_statique_cylinder.py  constraints.py  foo.py  geometry.py  hello_world.py  solver.py
src/daes/example_yoann_forces/: example_forces.py  forces.py
tests/: test_calcul_statique_cylinder.py
