[project]
name = "daes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.1",
    "pytest>=9.0.2",
]

[project.scripts]
daes = "daes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
